# sharepoint

./: .gitignore  example.env  pyproject.toml
sharepoint/: __init__.py  models.py  parse_pydantic.py  session.py  sharepoint.py  sp_fields.py  utils.py
tests/: conftest.py  test_sharepoint.py
