[tool.poetry]
name = "sharepoint"
version = "0.1.0"
description = ""
authors = ["Felipe Soza <fsozale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pydantic = "^2.5.1"
pytest = "^8.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
