[project]
name = "sharepoint"
version = "0.1.0"
description = ""
authors = [{ name = "Felipe Soza", email = "fsozale@gmail.com" }]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.28.1,<3",
    "pydantic>=2.5.1,<3",
    "pytest>=8.3.4,<9",
]

[dependency-groups]
dev = [
    "pydantic-settings>=2.13.1",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
